mejora el footer

--- a/index.html
+++ b/index.html
@@ -46,34 +46,20 @@
         </section>
     </main>
     <footer>
-        <div class="footer-up">
-            República Dominicana
-        </div> 
-        <ul class="footer-left">
-            <li>
-                <a href="">Publicidad</a>
-            </li>
-            <li>
-                <a href="">Negocios</a>
-            </li>
-            <li>
-                <a href="">Acerca de</a>
-            </li>
-            <li>
-                <a href="">Cómo funciona la búsqueda</a>
-            </li>
-        </ul>
-        <ul class="footer-right">
-            <li>
-                <a href="">Privacidad</a>
-            </li>
-            <li>
-                <a href="">Condiciones</a>
-            </li>
-            <li>
-                <a href="">Preferencias</a>
-            </li>
-        </ul>
+        <div class="pais">República Dominicana</div>
+        <section class="pies">
+            <ul>
+                <li>Sobre Google</li>
+                <li>Publicidad</li>
+                <li>Negocios</li>
+                <li>Cómo funciona Google</li>
+            </ul>
+            <ul>
+                <li>Privacidad</li>
+                <li>Condiciones</li>
+                <li>Preferencias</li>
+            </ul>
+        </section>
     </footer>
 </body>
 </html>
